samples/_failures_safe/1761468898_0e7eb0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5cf9f05.c: In function ‘main’:
./samples/SAFE/__tmp_f5cf9f05.c:153:5: error: expected declaration or statement at end of input
  153 |     if (word_count > 0) {
      |     ^~
./samples/SAFE/__tmp_f5cf9f05.c:153:5: error: expected declaration or statement at end of input
